<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_video2screen"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/black2"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/iv_videos"
            android:layout_width="160dp"
            android:layout_height="100dp"
            tools:ignore="ign"
            android:contentDescription="@string/todo" />

        <ImageView
            android:layout_gravity="bottom"
            android:id="@+id/iv_band"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:background="@color/black2"
            android:contentDescription="@string/todo1" />

        <TextView
            android:id="@+id/tv_playlist"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="4dp"
            android:text="@string/playlist"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="40dp"
        android:textStyle="bold"
        android:text="@string/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/cv_video2screen"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        android:text="@string/_16video"
        android:textStyle="bold"
        android:layout_marginTop="36dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>