<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".core.ui.activity_playlist2.ActivityPlaylistVideo">

    <include
        android:id="@+id/include_connection"
        layout="@layout/no_internet_connection"
        android:visibility="gone"
        />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <TextView
        android:id="@+id/TVback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beck"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textColor="@color/blue"
        app:drawableStartCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
        android:layout_marginTop="17dp"
        android:layout_marginStart="33dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Playlist"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    </androidx.appcompat.widget.Toolbar>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black2"
        app:title="@string/_16video"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
         android:background="@color/transparent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/page_margin"
          >
            <TextView
                android:id="@+id/playlist_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/title_"
                android:textSize="24sp"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/playlist_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_playlist"
                android:textColor="#B3000000"
                android:textSize="15sp"
                app:layout_collapseMode="parallax" />



        </LinearLayout>


    </com.google.android.material.appbar.CollapsingToolbarLayout>


</com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/page_margin"
            app:layout_anchorGravity="bottom|end"
            android:backgroundTint="@color/blue"
            android:baselineAlignBottom="false"
            app:maxImageSize="32dp"
            android:src="@drawable/ic_baseline_play_arrow_24"
            app:layout_anchor="@id/app_bar_layout"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/blue"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/series_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="@dimen/page_margin"
                    android:layout_marginTop="@dimen/page_margin_x2"
                    android:gravity="start"
                    android:text="@string/video_series"
                    android:textColor="@color/black"
                    app:layout_anchor="@id/fab"
                    app:layout_anchorGravity="bottom"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/videosRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    tools:listitem="@layout/item_video" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>